--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 *.userosscache
 *.sln.docstates
 
+.terraform
+*.lock.hcl
+*.tfstate
+*.tfstate.backup
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
